# tp_final_machine_learning

./: Tranform_data.ipynb  pca_loadings.csv  pyproject.toml  test.ipynb
