[project]
name = "tp-final"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.1.1",
    "ipywidgets>=8.1.7",
    "nltk>=3.9.1",
    "notebook>=7.4.3",
    "numba>=0.61.2",
    "pandas>=2.3.0",
    "python-dateutil>=2.9.0.post0",
    "rich>=14.0.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
]
